--- a/css/style.css
+++ b/css/style.css
@@ -60,31 +60,30 @@
   Green: #1BE059
   */
 /* Grid */
-
-.container {
-  max-width: 960px;
-  margin: 0 auto;
-}
-.col-1,
-.col-2,
-.col-3 {
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-.col-1 {
-  width: 220px;
-}
-.col-2 {
-  width: 460px;
-}
-.col-3 {
-  width: 700px;
-}
-.gutters {
-  margin-left: 10px;
-  margin-right: 10px;
-}
+  .container {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+  .col-1,
+  .col-2,
+  .col-3 {
+    float: left;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .col-1 {
+    width: 220px;
+  }
+  .col-2 {
+    width: 460px;
+  }
+  .col-3 {
+    width: 700px;
+  }
+  .gutters {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 /* Clearfix */
   .group:before,
   .group:after {
@@ -118,6 +117,9 @@
     line-height: 48px;
     margin-bottom: 24px;
   }
+  h2{
+    text-align: center;
+  }
   h3,
   .h-byline {
     font-size: 24px;
@@ -127,13 +129,15 @@
   .h-standfirst {
     font-size: 21px;
     margin-bottom: 24px;
+    padding-left: 10px;
   }
   h5,
   .h-related {
     font-size: 18px;
   }
+  /*paragraph*/
   p {
-    margin-bottom: 24px;
+    margin-bottom: 10px;
   }
   .text-offset {
     color: #827762;
@@ -153,6 +157,21 @@
   code {
     color: #8f816a;
     font-family: "Source Code Pro", Inconsolata, "Lucida Console", Terminal, "Courier New", Courier;
+  }
+/* Misc styles */
+  .divider {
+    border-bottom: 2px solid #e4de9a;
+    margin-bottom: 47px;
+    padding-bottom: 23px;
+  }
+  .lessons {
+    margin: 20px 0 0 0;
+  }
+  .lessons h2 {
+    margin: 20px 0 ;
+  }
+  .lessons ul {
+    padding: 0 0 0 50px;
   }
 /*Primary Header*/
   .primary-header {
@@ -200,10 +219,11 @@
   .primary-nav {
     float: left;
     margin-top: 2px;
+    padding-left: 50px;
   }
   .primary-nav li {
     float: left;
-    margin: 0 10px;
+    margin: 0 15px;
   }
   .primary-nav a {
     color: #965d51;
